--- a/package.json
+++ b/package.json
@@ -1,44 +1,43 @@
 {
-  "name": "newmusic-api",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "build": "tsc",
-    "start": "ts-node src/app.ts",
-    "dev": "ts-node src/app.ts",
-    "biome:check": "biome check .",
-    "biome:format": "biome format ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Wictorgirardi/NewMusic-API.git"
-  },
-  "keywords": [],
-  "author": "Wictor Girardi",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Wictorgirardi/NewMusic-back/issues"
-  },
-  "homepage": "https://github.com/Wictorgirardi/NewMusic-API#readme",
-  "description": "",
-  "dependencies": {
-    "@hono/node-server": "^1.13.7",
-    "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.7",
-    "drizzle-kit": "^0.30.1",
-    "drizzle-orm": "^0.38.3",
-    "drizzle-zod": "^0.6.1",
-    "hono": "^4.6.16",
-    "pg": "^8.13.1",
-    "pino": "^9.6.0",
-    "ts-node": "^10.9.2",
-    "uuid": "^11.0.5",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/bcrypt": "^5.0.2",
-    "@types/pg": "^8.11.10",
-    "fastify": "^5.2.1"
-  }
+	"name": "newmusic-api",
+	"version": "1.0.0",
+	"main": "server.js",
+	"scripts": {
+		"build": "tsc",
+		"start": "ts-node src/app.ts",
+		"dev": "ts-node src/app.ts",
+		"biome:check": "biome check --write .",
+		"biome:format": "biome format --write . "
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Wictorgirardi/NewMusic-API.git"
+	},
+	"keywords": [],
+	"author": "Wictor Girardi",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Wictorgirardi/NewMusic-back/issues"
+	},
+	"homepage": "https://github.com/Wictorgirardi/NewMusic-API#readme",
+	"description": "",
+	"dependencies": {
+		"bcrypt": "^5.1.1",
+		"dotenv": "^16.4.7",
+		"drizzle-kit": "^0.30.1",
+		"drizzle-orm": "^0.38.3",
+		"drizzle-zod": "^0.6.1",
+		"hono": "^4.6.16",
+		"pg": "^8.13.1",
+		"pino": "^9.6.0",
+		"uuid": "^11.0.5",
+		"@hono/node-server": "^1.13.7",
+		"zod": "^3.24.1",
+		"ts-node": "^10.9.2"
+	},
+	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
+		"@types/pg": "^8.11.10",
+		"fastify": "^5.2.1"
+	}
 }
