--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 	"homepage": "https://github.com/Wictorgirardi/NewMusic-API#readme",
 	"description": "",
 	"dependencies": {
+		"@hono/node-server": "^1.13.7",
+		"@hono/zod-openapi": "^0.18.3",
 		"bcrypt": "^5.1.1",
 		"dotenv": "^16.4.7",
 		"drizzle-kit": "^0.30.1",
@@ -29,11 +31,10 @@
 		"drizzle-zod": "^0.6.1",
 		"hono": "^4.6.16",
 		"pg": "^8.13.1",
-		"pino": "^9.6.0",
+		"pino": "^9.6.0", 
+		"ts-node": "^10.9.2",
 		"uuid": "^11.0.5",
-		"@hono/node-server": "^1.13.7",
-		"zod": "^3.24.1",
-		"ts-node": "^10.9.2"
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
