--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
 		"@types/bcrypt": "^5.0.2",
 		"@types/pg": "^8.11.10",
 		"fastify": "^5.2.1"
